# OpenEnv-CR

./: Dockerfile  LICENSE  Makefile  README.md  baseline_agent.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
server/: env.py  logic.py  models.py  tasks.json
tests/: test_baseline_mock.py  test_env.py  test_judge_stress.py  test_logic.py  test_reset_nobody.py
