[project]
name = "my_env"
version = "0.1.0"
description = "Deterministic code review simulation environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.11.1",
    "openai>=2.7.2",
    "requests==2.32.3",
    "httpx==0.28.1",
    "pytest==8.3.5",
    "openenv-core>=0.2.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[project.scripts]
server = "server.env:main"
